Fixed spacing on right on collapse

--- a/fle_site/static/css/styles.less
+++ b/fle_site/static/css/styles.less
@@ -108,8 +108,10 @@ a {
 #footer {
     background-color: @darkgray;
     color: @white;
-    padding-top: 30px;
-    margin-bottom: -30px;
+    padding-top: 20px;
+    .row {
+        margin-right: 0px;
+    }
     a {
         color: @white;
         text-decoration: none;
@@ -117,6 +119,20 @@ a {
             color: @gray;
         }
     }
+}
+
+.list-icons{
+  .horizontal-list;
+  font-size: 45px;
+  position: relative;
+  padding: 0 0 -30px 0;
+  margin: 0px;
+  @media (min-width: 768px) {
+      top: -40px;
+  }
+  @media (max-width: 767px) {
+      top: -20px
+  }
 }
 
 // --------------------
@@ -219,20 +235,6 @@ a {
 
 //Icons
 // --------------------------------------------------
-
-.list-icons{
-  .horizontal-list;
-  font-size: 45px;
-  position: relative;
-  padding: 0px;
-  margin: 0px;
-  @media (min-width: 768px) {
-      top: -40px;
-  }
-  @media (max-width: 767px) {
-      top: -20px
-  }
-}
 
 .icon,a.icon:before{
   font-family: 'Mono Social Icons Font';
